Added Contact Us link to nav and sideNav

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,7 @@
                         <li><a id="navLogin" href="{{ url_for('login') }}">Log In</a></li>
                         <li><a id="navRegister" href="{{ url_for('register') }}">Register</a></li>
                     {% endif %}
+                        <li><a id="navContactUs" href="mailto://admins@pimp-my-quiz.herokuapp.com">Contact Us</a></li>
                 </ul>
                 </div>
             </nav>
@@ -61,6 +62,7 @@
                 <li><a id="sideNavLogin" href="{{ url_for('login') }}">Log In</a></li>
                 <li><a id="sideNavRegister" href="{{ url_for('register') }}">Register</a></li>
             {% endif %}
+                <li><a id="sideNavContactUs" href="mailto://admins@pimp-my-quiz.herokuapp.com">Contact Us</a></li>
         </ul>
     </header>
 
