--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,8 @@
     {% endblock %}
     <!-- Title -->
     <title>Pimp My Quiz!</title>
+    <!-- Favicon -->
+    <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="image/ico">
 </head>
 <body>
     <header>
