--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,11 +40,11 @@ footer {
     box-shadow: 0 -2px 2px 0 rgba(0,0,0,0.14), 0 -3px 1px -2px rgba(0,0,0,0.12), 0 -1px 5px 0 rgba(0,0,0,0.2);
 }
 
-footer h5 {
-    margin: 0.875rem 0;
-}
-
 footer a {
+	font-size: 1.64rem;
+	line-height: 110%;
+    margin: 0.875rem 0;
+    font-weight: 400;
     display: inline-block;
     color: #fff;
     min-width: 35px;
