--- a/static/css/style.css
+++ b/static/css/style.css
@@ -618,10 +618,6 @@ blockquote {
     margin-bottom: 1rem;
 }
 
-/* form .user-search .search-radio-row {
-    margin: 0;
-} */
-
 /* new_quiz.html, edit_quiz.html */
 .row div.title.col,
 .row div.answers-container.col,
@@ -659,6 +655,14 @@ div.col.image-preview {
 
 #titleRow>.col {
     padding: 0;
+}
+
+#cancelUrl {
+    display: block;
+	font-size: 2.92rem;
+	line-height: 110%;
+	margin: 1.9466666667rem 0 1.168rem 0;
+    font-weight: 400;
 }
 
 /* Fix #quizTitle label to width of parent div.input-field elem */
