--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -10,10 +10,10 @@
                 <!-- title and close button -->
                 <div class="modal-title-row row">
                     <div class="col s11">
-                        <h5 id="modalTitle">Edit User</h5>
+                        <h5 >Edit User</h5>
                     </div>
                     <div class="col s1 modal-close-button">
-                        <a id="modalClose" class="modal-action modal-close light-blue-text text-darken-4" href="#">&times;</a>
+                        <a class="modal-action modal-close light-blue-text text-darken-4" href="#">&times;</a>
                     </div>
                 </div>
                 <!-- username -->
