Removed invalid characters from forgotten password mailto

--- a/templates/login.html
+++ b/templates/login.html
@@ -23,7 +23,7 @@
                 </div>
                 <!-- Forgotten Password -->
                 <div class="row col s12 center-align">
-                    <a href="mailto:admins@pimp-my-quiz.herokuapp.com?subject=Password%20Reset%20Request&body=Hi,%20My%20username%20is%20<username>%20and%20my%20email%20address%20is%20<email%20address>.%20%20Could%20you%20please%20reset%20my%20password?" class="light-blue-text text-darken-4">Forgotten your Password?</a>
+                    <a href="mailto:admins@pimp-my-quiz.herokuapp.com?subject=Password%20Reset%20Request&body=Hi,%20My%20username%20is%20USERNAME%20and%20my%20email%20address%20is%20EMAILADDRESS.%20%20Could%20you%20please%20reset%20my%20password?" class="light-blue-text text-darken-4">Forgotten your Password?</a>
                 </div>
                 <!-- log in -->
                 <div class="row">
