Fixed: Footer social media links open in a new tab

--- a/templates/base.html
+++ b/templates/base.html
@@ -186,16 +186,16 @@
     </main>
 
     <footer class="footer text-shadow light-blue darken-4 center-align">
-        <a class="tooltipped" data-position="top" data-tooltip="Facebook" href="https://www.facebook.com">
+        <a class="tooltipped" data-position="top" data-tooltip="Facebook" href="https://www.facebook.com" target="_blank">
             <i class="fab fa-facebook fa-fw"></i>
         </a>
-        <a class="tooltipped" data-position="top" data-tooltip="Instagram" href="https://www.instagram.com">
+        <a class="tooltipped" data-position="top" data-tooltip="Instagram" href="https://www.instagram.com" target="_blank">
             <i class="fab fa-instagram fa-fw"></i>
         </a>
-        <a class="tooltipped" data-position="top" data-tooltip="Twitter" href="https://www.twitter.com">
+        <a class="tooltipped" data-position="top" data-tooltip="Twitter" href="https://www.twitter.com" target="_blank">
             <i class="fab fa-twitter fa-fw"></i>
         </a>
-        <a class="tooltipped" data-position="top" data-tooltip="Youtube" href="https://www.youtube.com">
+        <a class="tooltipped" data-position="top" data-tooltip="Youtube" href="https://www.youtube.com" target="_blank">
             <i class="fab fa-youtube fa-fw"></i>
         </a>
         <a class="tooltipped" data-position="top" data-tooltip="Contact Us" href="mailto://admins@pimp-my-quiz.herokuapp.com">
