--- a/static/css/style.css
+++ b/static/css/style.css
@@ -992,7 +992,7 @@ div.col.image-preview {
 
     header,
     footer,
-    #viewQuiz > #titleRow > .col.s2 > h3 {
+    #viewQuiz > #titleRow #copyQuizLink {
         display: none;
     }
 }
